fix player on ios devices

--- a/src/globals.css
+++ b/src/globals.css
@@ -33,6 +33,12 @@
     --ring: 240 10% 3.9%;
 
     --radius: 0.5rem;
+
+    /* Video player */
+    --media-brand: 245 245 245;
+    --media-focus: 78 156 246;
+    --video-border: none;
+    --video-border-radius: 0;
   }
 
   .dark {
@@ -64,27 +70,31 @@
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
   }
-}
 
-@layer base {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+
   .icons {
     @apply bg-[url('/icons.png')] w-5 h-5 bg-no-repeat inline-block bg-[length:25px_1461px];
   }
+
   .icon-filter {
     @apply invert-[21%] sepia-[22%] saturate-[640%] hue-rotate-[178deg] brightness-[95%] contrast-[86%];
   }
+
   .chapter-nav {
     @apply h-[52px] md:h-[67px] bg-muted/80 dark:bg-background/80 dark:border flex px-3 py-1 md:p-3 rounded-full items-center w-full gap-x-2 backdrop-blur-xl;
   }
+
   .chapter-nav.stickied {
     @apply fixed top-4 border shadow-lg max-w-[calc(100%-32px)] xl:max-w-[1120px] transition-[top];
   }
+
   body.header-pinned .stickied {
     @apply top-20;
   }
@@ -93,6 +103,7 @@
 .CircularProgressbar-path {
   @apply stroke-blue-500 !important;
 }
+
 .CircularProgressbar-trail {
   @apply stroke-gray-300/50 dark:stroke-gray-700/50 !important;
 }
